--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <aside id="saida">
                 <div id="semMensagem">
                     <img src="Imagens/principal.svg" alt="Sem mensagem encontrada">
-                    <h2>Nenhuma mensagem encontada.</h2>
+                    <h2>Nenhuma mensagem encontada</h2>
                     <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
                 </div>
                 <textarea name="criptoTxt" id="msgCriptografada" readonly></textarea>
